onlineJudge/uploadfile/errormessagefiles/WeirdAlgorithm_811.txt
./uploadfile/WeirdAlgorithm_811.java:6: error: class WeirdAlgorithm is public, should be declared in a file named WeirdAlgorithm.java
public class WeirdAlgorithm {
       ^
1 error
